--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,58 @@
 .nav a {
-    color: black;
+	color: black;
+	font-size: 16px;
+}
+
+.title {
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	color: #684466;
+	font-size: 40px;
+	font-weight: bold;
+}
+
+.cards span {
+	font-family: 'Times New Roman', Times, serif;
+	font-weight: bold;
+	font-size: 25px;
+	color: #594343;
+}
+
+/* Phone */
+@media (min-width: 320px) and (max-width: 767px) {
+	.title {
+		font-family: Verdana, Geneva, Tahoma, sans-serif;
+		color: #684466;
+		font-size: 25px;
+		font-weight: bold;
+	}
+	.nav a {
+		color: black;
+		font-size: 12px;
+		padding: 0px 10px;
+	}
+	.icon {
+		width: 29px;
+		height: 29px;
+	}
+}
+
+
+
+/* Tablet */
+@media (min-width: 767px) and (max-width: 992px) {
+	.title {
+		font-family: Verdana, Geneva, Tahoma, sans-serif;
+		color: #684466;
+		font-size: 30px;
+		font-weight: bold;
+	}
+	.nav a {
+		color: black;
+		font-size: 15px;
+		padding: 0px 10px;
+	}
+	.icon {
+		width: 49px;
+		height: 49px;
+	}
 }
