--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@
 
 .title {
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
-	color: #684466;
+	color: #4f394d;
 	font-size: 40px;
 	font-weight: bold;
 }
