--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@
 
 .title {
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
-	color: #4f394d;
+	color: #846e82;
 	font-size: 40px;
 	font-weight: bold;
 }
@@ -18,7 +18,7 @@
 }
 
 .footer {
-	background-color: #976e9367;
+	background-color: #957c92;
 }
 
 .footer span {
